--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha1
	- Make installation error messages more helpful
	- Added Swedish (sv_SE) translation (Thanks yeager)
	- Allow Add / Verify of sub directories of existing catalogs
	- Prevent an fread of 0 bytes if you seek to the end of a file
	- Added require_localnet_session config that allows you to exclude
		IP(s) from session checks, see config.dist 
	- Added Nusoap (http://sourceforge.net/projects/nusoap/) library
		for use with future lyrics feature
	- Fixed problem with flash player where random urls were not being
		added correctly
	- Fixed problem with user creation using old method (Thx Purdyk)
	- Switched to SHA256() for API and Passwords
	- Added check for BADTIME error code from Last.FM and correctly
		return the error rather then a generic one
	- Fix http auth session issues, where every request blew away the 
		old session information
	- Many other minor improvements (Thx Dipsol)
	- Fixed warnings in caching code (Thx Dipsol)
	- Massive text cleanup (Thx Dipsol)
	- Fixed tag searching and improved some other search methods to 
		prevent SQL warnings on no results
	- Improved Test page checks to more accuratly verify putENV support
	- Make network downsampling a little more sane, don't require 
		access level
	- Added caching to Playlist dropdown 
	- Fixed double caching on some objects
	- Added base.css and 4 tag 'font' sizes depending on weight/count
	- Fixed inline song edit
	- Updated registration multi-byte mail.
	- Fixed vainfo.class.php didn't catch exception for first analyze.
	- Fixed iconv() returns an empty strings (Thx abs0)
	- Updated getid3 for multi-byte characters, but some wrong id3tags
		have occurred exception error.