@@ -1112,7 +1112,7 @@ class Catalog {
 		$new_song->lyrics	= $results['lyrics']; 
                 $new_song->bitrate      = $results['bitrate'];
                 $new_song->rate         = $results['rate'];
-                $new_song->mode         = $results['mode'];
+                $new_song->mode         = ($results['mode'] == 'cbr') ? 'cbr' : 'vbr'; 
                 $new_song->size         = $results['size'];
                 $new_song->time         = $results['time'];
 		$new_song->mime		= $results['mime']; 
