@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.5-Alpha1
+	- Fixed catalog_update.inc so it doesn't produce errors
+	- Made democratic play respect force http play
 	- Make installation error messages more helpful
 	- Added Swedish (sv_SE) translation (Thanks yeager)
 	- Allow Add / Verify of sub directories of existing catalogs
